iptables.conf
# Generated by iptables-save v1.6.0 on Sun Feb 10 02:54:05 2019
*filter
:INPUT DROP [682:43895]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1437:127979]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -i wan -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lan0 -j ACCEPT
-A INPUT -i lan1 -j ACCEPT
-A INPUT -i lan2 -j ACCEPT
-A INPUT -i lan3 -j ACCEPT
-A INPUT -i ap0 -j ACCEPT
-A INPUT -i br0 -j ACCEPT
-A FORWARD -i br0 -j ACCEPT
-A FORWARD -o br0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Sun Feb 10 02:54:05 2019
# Generated by iptables-save v1.6.0 on Sun Feb 10 02:54:05 2019
*nat
:PREROUTING ACCEPT [257291:19089461]
:INPUT ACCEPT [6086:400094]
:OUTPUT ACCEPT [2153:137737]
:POSTROUTING ACCEPT [42:3592]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -o wan -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Sun Feb 10 02:54:05 2019
